1. Changed home page google login link 2. Changed application running port to 8585 3. Added username to right top when logged in.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,4 +56,4 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid with
 
 
 # google sign in
-google.signin=Sign in Google
+google.signin=Sign in
