--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,4 +56,9 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid with
 
 
 # google sign in
-google.signin=Sign in
+google.signin=Sign In
+
+
+# Preference
+preference.unique.error=Please select three different preferences.
+user.preference.list.label=User Preferences
