Adding IntelliMeet CRUD functionality

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -65,3 +65,7 @@ user.preference.list.label=User Preferences
 
 # Topic
 topic.interest.already.shown.message=Sorry! You are already counted in interested users.
+
+#IntelliMeet messages
+intellimeet.label=IntelliMeet
+intellimeet.deletion.restricted= IntelliMeet cannot be deleted
