Implemented creation of IntelliMeet.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -68,4 +68,5 @@ topic.interest.already.shown.message=Sorry! You are already counted in intereste
 
 #IntelliMeet messages
 intellimeet.label=IntelliMeet
-intellimeet.deletion.restricted= IntelliMeet cannot be deleted
+intellimeet.deletion.restricted= IntelliMeet cannot be deleted.
+intelliMeet.status.active.error=Only one IntelliMeet can be active at one time.
