Updating role based security

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -70,3 +70,6 @@ topic.interest.already.shown.message=Sorry! You are already counted in intereste
 intellimeet.label=IntelliMeet
 intellimeet.deletion.restricted= IntelliMeet cannot be deleted.
 intelliMeet.status.active.error=Only one IntelliMeet can be active at one time.
+
+# Session message
+session.not.deleted=Session can not be deleted
