Changes for initial QA release:
1. remove delete button from topic show
2. hide registered as presenter for now
3. hide all menu link except topic for now
4. Add new category "Other"
5. remove bootstrap related content from main page
6. Register now button renamed to View topic and will only be shown if logged in
7. removed bootstrap dummy data to be populated

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -65,6 +65,7 @@ user.preference.list.label=User Preferences
 
 # Topic
 topic.interest.already.shown.message=Sorry! You are already counted in interested users.
+topic.not.deleted=Topic can not be deleted
 
 #IntelliMeet messages
 intellimeet.label=IntelliMeet
