Fixed plusOne issue for not loggedin user.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -66,6 +66,7 @@ user.preference.list.label=User Preferences
 # Topic
 topic.interest.already.shown.message=Sorry! You are already counted in interested users.
 topic.not.deleted=Topic can not be deleted
+access.denied.message=Access Denied! Please login to do +1.
 
 #IntelliMeet messages
 intellimeet.label=IntelliMeet
