Defined some new properties corresponding to description updated.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -66,7 +66,10 @@ user.preference.list.label=User Preferences
 # Topic
 topic.interest.already.shown.message=Sorry! You are already counted in interested users.
 topic.not.deleted=Topic can not be deleted
-access.denied.message=Access Denied! Please login to do +1.
+access.denied.message=Access Denied! Please login to do like.
+topic.not.found=Topic not found.
+topic.description.updated.message=Topic description updated successfully.
+topic.description.nullable.error=Please enter some description.
 
 #IntelliMeet messages
 intellimeet.label=IntelliMeet
