Defined ownerId unique error message in messages.properties

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -78,3 +78,4 @@ intelliMeet.status.active.error=Only one IntelliMeet can be active at one time.
 
 # Session message
 session.not.deleted=Session can not be deleted
+ownerId.unique.error=Sorry! You cannot own one session twice in same IntelliMeet.
