--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -79,3 +79,6 @@ intelliMeet.status.active.error=Only one IntelliMeet can be active at one time.
 # Session message
 session.not.deleted=Session can not be deleted
 ownerId.unique.error=Sorry! You cannot own one session twice in same IntelliMeet.
+
+#Token
+token.consumed.message=Sorry! Either the token has been expired or already consumed.
