Updated token expired message.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -81,4 +81,4 @@ session.not.deleted=Session can not be deleted
 ownerId.unique.error=Sorry! You cannot own one session twice in same IntelliMeet.
 
 #Token
-token.consumed.message=Sorry! Either the token has been expired or already consumed.
+token.consumed.message=Sorry! Either the token has been expired or it's already consumed.
