Improved survey show page UI.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -82,3 +82,5 @@ ownerId.unique.error=Sorry! You cannot own one session twice in same IntelliMeet
 
 #Token
 token.consumed.message=Sorry! Either the token has been expired or it's already consumed.
+
+survey.closed.message=<strong>Sorry</strong> This is survey has been closed. Please contact IntelliMeet owners for further assistance.
