--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -83,4 +83,5 @@ ownerId.unique.error=Sorry! You cannot own one session twice in same IntelliMeet
 #Token
 token.consumed.message=Sorry! Either the token has been expired or it's already consumed.
 
-survey.closed.message=<strong>Sorry</strong> This is survey has been closed. Please contact IntelliMeet owners for further assistance.
+survey.closed.error.message=<strong>Sorry</strong> This is survey has been closed. Please contact IntelliMeet owners for further assistance.
+survey.closed.message=<strong>Please note</strong> This is survey has been closed.
